<resources>
    <string name="app_name">ATV_02</string>
    <string name="btn_text">+ NEW</string>
    <string name="voltar">VOLTAR</string>
    <string name="formul_rio_aluno">FORMULÁRIO - ALUNO</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="grade">Grade</string>
    <string name="site">Site</string>
    <string name="rua">Rua</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
</resources>
